============================================================================

Version 6.4.2 - not yet released
* calculations
  - contest: relax altitude difference check (#2348)
* data files
  - added polar of "Ka 6E" and corrected the "Ka 6CR" one (#2327)
  - added polars of "AK-8" and "Blanik L13-AC" (#2329)
* map
  - suspend the map renderer while thermal assistant is shown

Version 6.4.1 - 2012/08/30
* calculations
  - fix "final GR" calculation (#2256)
  - improved great circle vector calculation precision
* map
  - new option to disable the wind arrow
* data files
  - increased arc airspace resolution for large radiuses
* devices
  - fix potential crash in I/O thread
  - fix date/time parsing in Flytec device driver
  - Volkslogger: fix task declaration over Bluetooth
  - CAI GPS-NAV: work around timing problem
  - LX: fix Colibri/LX20 declaration problems
  - Westerboer: support for smaller steps in MC value setting
  - improved Bluetooth support on Windows CE
  - work around Windows CE serial port driver bug, fixes freeze during
    Nano task declaration (#2255)
* user interface
  - remove duplicate "trail drift" setting (#2252)
  - fix flarm teamcolor saving (#2291)
  - fix flarm targets in map item list (#2267)
* logger
  - IGC B record is invalid ("V") with just 2D fix
  - log pressure altitude in IGC files
* fix crash on low battery in simulator mode (#2306)

Version 6.4 - 2012/07/31
* calculations
  - Contest: add FFVV NetCoupe (#1648)
  - Contest: optionally include next task point in OLC classic/plus
    score calculation (#1561)
* devices
  - support up to 6 devices
  - buffered serial port I/O
  - FLARM: new FLARM setup dialog
  - added drivers for GliderTools GT Altimeter and Compass C-Probe
  - LXNAV V7 and Nano configuration dialog
* data files
  - removed support for separate terrain/topography files, now XCM only
* map
  - configurable airspace rendering (#1847)
  - "dots for sink" trail styles
  - weather stations on the map (#1487)