@@ -10,6 +10,9 @@ Version 6.4.2 - not yet released
   - added polars of "AK-8" and "Blanik L13-AC" (#2329)
 * map
   - suspend the map renderer while thermal assistant is shown
+* user interface
+  - closing the XCSoar window cancels the current modal dialog (was
+    broken on Windows)
 
 Version 6.4.1 - 2012/08/30
 * calculations
